--- a/engine/dependencies/CMakeLists.txt
+++ b/engine/dependencies/CMakeLists.txt
@@ -6,3 +6,5 @@ add_subdirectory(glfw EXCLUDE_FROM_ALL)
 add_subdirectory(glm EXCLUDE_FROM_ALL)
 
 add_subdirectory(glad EXCLUDE_FROM_ALL)
+
+add_subdirectory(stb EXCLUDE_FROM_ALL)
