--- a/engine/dependencies/CMakeLists.txt
+++ b/engine/dependencies/CMakeLists.txt
@@ -2,9 +2,12 @@ set(GLFW_BUILD_DOCS OFF CACHE BOOL "" FORCE)
 set(GLFW_BUILD_TESTS OFF CACHE BOOL "" FORCE)
 set(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
 add_subdirectory(glfw EXCLUDE_FROM_ALL)
+set_msvc_runtime_library(glfw)
 
 add_subdirectory(glm EXCLUDE_FROM_ALL)
 
 add_subdirectory(glad EXCLUDE_FROM_ALL)
 
 add_subdirectory(stb EXCLUDE_FROM_ALL)
+
+add_subdirectory(physx-static EXCLUDE_FROM_ALL)
