--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "engine/dependencies/glm"]
 	path = engine/dependencies/glm
 	url = https://github.com/g-truc/glm.git
+[submodule "engine/dependencies/physx-static"]
+	path = engine/dependencies/physx-static
+	url = https://github.com/andyroiiid/physx-static.git
