migrate game logic

--- a/game/CMakeLists.txt
+++ b/game/CMakeLists.txt
@@ -1,4 +1,15 @@
-add_executable(game game.cpp)
+add_executable(game
+        Actor.h
+
+        ADirectionalLight.cpp ADirectionalLight.h
+        AFlyCamera.cpp AFlyCamera.h
+        APhysBoxDynamic.cpp APhysBoxDynamic.h
+        APhysBoxStatic.cpp APhysBoxStatic.h
+        APointLight.cpp APointLight.h
+
+        Scene.cpp Scene.h
+        Game.cpp Game.h
+        main.cpp)
 
 target_link_libraries(game PRIVATE engine)
 
