AFlyCamera -> ACamera & APlayerNoClip

--- a/game/CMakeLists.txt
+++ b/game/CMakeLists.txt
@@ -1,7 +1,8 @@
 add_executable(game
         actors/Actor.h
         actors/ADirectionalLight.cpp actors/ADirectionalLight.h
-        actors/AFlyCamera.cpp actors/AFlyCamera.h
+        actors/ACamera.cpp actors/ACamera.h
+        actors/APlayerNoClip.cpp actors/APlayerNoClip.h
         actors/APhysxBox.cpp actors/APhysxBox.h
         actors/APointLight.cpp actors/APointLight.h
         actors/ALevelGeom.cpp actors/ALevelGeom.h
