more random stuff

--- a/game/CMakeLists.txt
+++ b/game/CMakeLists.txt
@@ -4,7 +4,7 @@ add_executable(game
         actors/ACamera.cpp actors/ACamera.h
         actors/APlayerNoClip.cpp actors/APlayerNoClip.h
         actors/APlayer.cpp actors/APlayer.h
-        actors/APhysxBox.cpp actors/APhysxBox.h
+        actors/APhysBox.cpp actors/APhysBox.h
         actors/APointLight.cpp actors/APointLight.h
         actors/ALevelGeometry.cpp actors/ALevelGeometry.h
 
