--- a/engine/CMakeLists.txt
+++ b/engine/CMakeLists.txt
@@ -25,6 +25,7 @@ add_library(engine
         include/haru/render/MeshUtilities.h
         include/haru/render/Shader.h
         include/haru/render/Texture.h
+        include/haru/render/Material.h
         include/haru/render/Renderer.h
         include/haru/render/DeferredShaders.h
         include/haru/render/DeferredRenderer.h
