--- a/engine/dependencies/glad/CMakeLists.txt
+++ b/engine/dependencies/glad/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.0)
 project(glad C)
 
-add_library(glad src/gl.c src/wgl.c)
+add_library(glad src/gl.c)
 
 target_include_directories(glad PUBLIC include)
