--- a/engine/CMakeLists.txt
+++ b/engine/CMakeLists.txt
@@ -47,6 +47,6 @@ target_include_directories(engine PUBLIC include)
 
 target_compile_definitions(engine PUBLIC GLFW_INCLUDE_NONE)
 
-target_link_libraries(engine PUBLIC glfw glad glm stb PhysX physfs-static)
+target_link_libraries(engine PUBLIC glfw glad glm stb PhysX physfs-static TracyClient)
 
 set_msvc_runtime_library(engine)
