--- a/game/CMakeLists.txt
+++ b/game/CMakeLists.txt
@@ -13,6 +13,7 @@ add_executable(game
         actors/AWorldSpawn.cpp actors/AWorldSpawn.h
         actors/APropStatic.cpp actors/APropStatic.h
         actors/AFuncBrush.cpp actors/AFuncBrush.h
+        actors/AFuncPhys.cpp actors/AFuncPhys.h
 
         map/Entity.h map/Entity.cpp
         map/FacesAndTexture.cpp map/FacesAndTexture.h
