--- a/engine/CMakeLists.txt
+++ b/engine/CMakeLists.txt
@@ -51,6 +51,6 @@ target_include_directories(engine PUBLIC include)
 
 target_compile_definitions(engine PUBLIC GLFW_INCLUDE_NONE)
 
-target_link_libraries(engine PUBLIC glfw glad glm stb PhysX physfs-static TracyClient)
+target_link_libraries(engine PUBLIC glfw glad glm stb PhysX physfs-static simdjson TracyClient)
 
 set_msvc_runtime_library(engine)
